--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="home-content">
                 <h3>Hi, Myself</h3>
                 <h1>Kaveesha Ramasinghe</h1>
-                <h3>And I'm a <span>UI/UX Designer</span></h3>
+                <h3>And I'm a <span class="multiple-text"></span></h3>
                 <p>Passionate about transforming complex ideas into seamless, engaging, and visually balanced digital experiences.</p>
                 <div class="social-media">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -172,6 +172,25 @@
         </section>
 
         <!--Footer Design-->
+        <footer class="footer">
+            <div class="footer-text">
+                <p>Copyright &copy; 2025 by @kaveesharamasinghe | All Rights Reserved.</p>
+            </div>
+
+            <div class="footer-IconTop">
+                <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
+            </div>
+        </footer>
+
+        <!--Scroll Reveal JS-->
+
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <!--Typed JS-->
+
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+        <!--Main JS-->
 
         <script src="script.js"></script>
     </body>
