--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
                 <a href="#services">Services</a>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
@@ -57,8 +57,8 @@
 
             <div class="about-content">
                 <h2 class="heading">About <span>Me</span></h2>
-                <h3>UI/UX Designer | Web Designer</h3>
-                <p>I’m Kaveesha Ramasinghe, an undergraduate student in Information Systems at the University of Sabaragamuwa and a passionate UI/UX and Web Designer. I focus on creating user-centered, visually appealing designs that simplify technology and enhance user experiences. With a process driven by empathy, research, and creativity, I strive to craft intuitive digital products that connect with users and solve real-world problems.</p>
+                <h3>UI/UX Designer</h3>
+                <p>I’m Kaveesha Ramasinghe, an undergraduate student in Information Systems at the University of Sabaragamuwa and a passionate UI/UX Designer. I focus on creating user-centered, visually appealing designs that simplify technology and enhance user experiences. With a process driven by empathy, research, and creativity, I strive to craft intuitive digital products that connect with users and solve real-world problems.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </section>
@@ -91,59 +91,59 @@
             </div>
         </section>
 
-        <!--Portfolio Section Design-->
-        <section class="Portfolio" id="portfolio">
+        <!--Projects Section Design-->
+        <section class="Projects" id="projects">
             <h2 class="heading">Latest <span>Projects</span></h2>
 
-            <div class="portfolio-container">
-                <div class="portfolio-box">
+            <div class="projects-container">
+                <div class="projects-box">
                     <img src="image/pic 1.png" alt="">
-                    <div class="portfolio-layer">
+                    <div class="projects-layer">
                         <h4>Mobile App Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
+                <div class="projects-box">
                     <img src="image/pic 2.png" alt="">
-                    <div class="portfolio-layer">
+                    <div class="projects-layer">
                         <h4>Mobile App Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
+                <div class="projects-box">
                     <img src="image/pic 3.png" alt="">
-                    <div class="portfolio-layer">
+                    <div class="projects-layer">
                         <h4>Mobile App Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
-                    <img src="image/4.jpg" alt="">
-                    <div class="portfolio-layer">
+                <div class="projects-box">
+                    <img src="image/pic 4.png" alt="">
+                    <div class="projects-layer">
                         <h4>Web Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
-                    <img src="image/5.jpg" alt="">
-                    <div class="portfolio-layer">
+                <div class="projects-box">
+                    <img src="image/pic 5.png" alt="">
+                    <div class="projects-layer">
                         <h4>Web Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
                     </div>
                 </div>
 
-                <div class="portfolio-box">
-                    <img src="image/6.jpg" alt="">
-                    <div class="portfolio-layer">
+                <div class="projects-box">
+                    <img src="image/pic 6.png" alt="">
+                    <div class="projects-layer">
                         <h4>Web Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <i class="fa-solid fa-up-right-from-square"></i>
