--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://www.instagram.com/kavee_za00?igsh=NzU4bzMzcDZhb3Bt"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/kaveesha-ramasinghe-7b476b341/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <a href="image/CV.pdf" class="btn">Download CV</a>
+                <a href="image/CV - Kaveesha Ramasinghe.pdf" class="btn">Download CV</a>
             </div>
 
             <div class="home-img">
@@ -135,9 +135,9 @@
                 <div class="projects-box">
                     <img src="image/pic 5.png" alt="">
                     <div class="projects-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        <i class="fa-solid fa-up-right-from-square"></i>
+                        <h4>Flower Shop Web Design</h4>
+                        <p>A refined and elegant flower shopping experience designed with soft aesthetics, clear structure, and a smooth, effortless browsing flow.</p>
+                        <a href="https://www.behance.net/gallery/238665409/FlowerLover-Intuitive-Flower-Shop-Design"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
 
