update latest project section

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <div class="projects-box">
                     <img src="image/pic 6.png" alt="">
                     <div class="projects-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        <i class="fa-solid fa-up-right-from-square"></i>
+                        <h4>Train Booking Web Design</h4>
+                        <p>A clean and intuitive interface crafted for easy ticket booking and real-time train updates.</p>
+                        <a href="https://xd.adobe.com/view/cdd3d1d6-c834-4d8b-bce3-4e605d8a435d-9880/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
